created login route

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.8",
     "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "next": "15.1.2",
     "react": "^19.0.0",
