--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
+    "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "next": "15.1.2",
